--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 20px;
     box-sizing: border-box;
-    background: url('https://pluspng.com/img-png/beer-png-pint-beer-png-image-2445.png') no-repeat center center fixed; /* Replace with your flame image URL */
+    background: url('/beer-png-pint-beer-png-image-2445.png') no-repeat center center fixed; /* Replace with your flame image URL */
     background-size: cover;
 }
 
